--- a/recipes/calcp.html
+++ b/recipes/calcp.html
@@ -128,63 +128,74 @@
     </div>
 <script>
     const pentadecimalSymbols = ['L', '9', '2', 'w', 'd', 'u', 'q', '0', '1', 'p', 'n', 'b', 'm', '5', '6', '7'];
-    const pentadecimalValues = {
-        'L': -7, '9': -6, '2': -5, 'w': -4, 'd': -3, 'u': -2, 'q': -1,
-        '0': 0, '1': 0.5,
-        'p': 1, 'n': 2, 'b': 3, 'm': 4, '5': 5, '6': 6, '7': 7
-    };
+const pentadecimalValues = {
+    'L': -7, '9': -6, '2': -5, 'w': -4, 'd': -3, 'u': -2, 'q': -1,
+    '0': 0, '1': 0.5,
+    'p': 1, 'n': 2, 'b': 3, 'm': 4, '5': 5, '6': 6, '7': 7
+};
 
-    function appendToInput(symbol) {
-        const inputField = document.getElementById('inputField');
-        const currentInput = inputField.value;
+function appendToInput(symbol) {
+    const inputField = document.getElementById('inputField');
+    const currentInput = inputField.value;
 
-        if (symbol === '.') {
-            const lastChar = currentInput.charAt(currentInput.length - 1);
-            const hasDecimal = currentInput.includes('.');
-            if (!lastChar || ['+', '×', '/'].includes(lastChar) || !hasDecimal) {
-                inputField.value += '0.';
-            }
-        } else if (symbol === '1' || symbol === '0') {
-            const regex = /(?:[×/])?[0-9.]+[1-9][0-9]*[b]/;
-            if (regex.test(currentInput) || symbol === '0') {
-                inputField.value += symbol;
-            }
-        } else {
+    if (symbol === '.') {
+        const lastChar = currentInput.charAt(currentInput.length - 1);
+        const hasDecimal = currentInput.includes('.');
+        if (!lastChar || ['+', '×', '/'].includes(lastChar) || !hasDecimal) {
+            inputField.value += '0.';
+        }
+    } else if (symbol === '1' || symbol === '0') {
+        const regex = /(?:[×/])?[0-9.]+[1-9][0-9]*[b]/;
+        if (regex.test(currentInput) || symbol === '0') {
             inputField.value += symbol;
         }
+    } else {
+        inputField.value += symbol;
+    }
+}
+
+function balancedToDecimal(pentadecimalStr) {
+    // Handle binary decimals
+    if (pentadecimalStr.includes('b.')) {
+        const binaryDecimal = parseFloat(pentadecimalStr.replace('b.', '0.'));
+        return binaryDecimal * 1.5; // Multiply by 1.5 for binary decimals
     }
 
-    function balancedToDecimal(pentadecimalStr) {
-        let decimalValue = 0;
-        let base = 1;
-        for (let i = pentadecimalStr.length - 1; i >= 0; i--) {
-            if (pentadecimalStr[i] === 'p') {
-                decimalValue += 0.5 * base;
-            } else {
-                decimalValue += pentadecimalValues[pentadecimalStr[i]] * base;
-            }
-            base *= 15;
+    // Convert other symbols as base 10 decimals
+    let decimalValue = 0;
+    let base = 1;
+    for (let i = pentadecimalStr.length - 1; i >= 0; i--) {
+        if (pentadecimalStr[i] === 'p') {
+            decimalValue += 0.5 * base;
+        } else {
+            decimalValue += pentadecimalValues[pentadecimalStr[i]] * base;
         }
-        return decimalValue;
+        base *= 15;
     }
+    return decimalValue;
+}
 
-    function decimalToBalanced(decimalValue) {
-        if (decimalValue === 0) return '0';
-        let pentadecimalStr = '';
-        while (decimalValue !== 0) {
-            let remainder = decimalValue % 15;
-            decimalValue = Math.floor(decimalValue / 15);
-            if (remainder > 7) {
-                remainder -= 15;
-                decimalValue += 1;
-            } else if (remainder < -7) {
-                remainder += 15;
-                decimalValue -= 1;
-            }
-            pentadecimalStr = pentadecimalSymbols[remainder + 7] + pentadecimalStr;
+function decimalToBalanced(decimalValue) {
+    if (decimalValue === 0) return '0';
+    let pentadecimalStr = '';
+    while (decimalValue !== 0) {
+        let remainder = decimalValue % 15;
+        decimalValue = Math.floor(decimalValue / 15);
+        if (remainder > 7) {
+            remainder -= 15;
+            decimalValue += 1;
+        } else if (remainder < -7) {
+            remainder += 15;
+            decimalValue -= 1;
         }
-        return pentadecimalStr;
+        pentadecimalStr = pentadecimalSymbols[remainder + 7] + pentadecimalStr;
     }
+    return pentadecimalStr;
+}
+
+// Rest of the code remains unchanged...
+
+    
 
     function calculate() {
         const inputField = document.getElementById('inputField');
