--- a/recipes/img/pdn.html
+++ b/recipes/img/pdn.html
@@ -1,1 +1,22 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Long Pentadecimal Number Generator</title>
+    <!-- Add any additional styles or scripts here -->
+</head>
+<body>
+    <h1>Pentadecimal Number Generator</h1>
+
+    <label for="length">Length:</label>
+    <input type="number" id="length" value="10" min="1">
+
+    <button onclick="generatePentadecimal()">Generate Number</button>
+
+    <div id="result"></div>
+
+    <script src="pdn.js"></script>
+</body>
+</html>
