--- a/recipes/Calc.html
+++ b/recipes/Calc.html
@@ -123,7 +123,7 @@
         <br>
         <footer>
             <h5>Balanced Pentadecimal Calculator</h5>
-            <h6>- Version: 0.p69</h6>
+            <h6>- Version: 0.p6wq</h6>
             <br>
             <h6>as imagined by B.S.G.</h6>
         </footer>
