--- a/recipes/d2p.html
+++ b/recipes/d2p.html
@@ -25,14 +25,14 @@
 </head>
 <body>
     <div class="calculator">
-        <h2>Balanced Undecimal Calculator</h2>
+        <h2>Balanced pentadecimal Calculator</h2>
         <label for="decimalInput">Decimal Number:</label>
         <input type="number" id="decimalInput" placeholder="Enter a decimal number">
         <br>
         <button onclick="convertToUndecimal()">Convert to Pentadecimal</button>
         <br>
         <label for="undecimalOutput">Balanced pentadecimal:</label>
-        <input type="text" id="undecimalOutput" readonly>
+        <input type="text" id="pentadecimalOutput" readonly>
     </div>
 
     <script>
